--- a/package.json
+++ b/package.json
@@ -1,39 +1,67 @@
 {
-  "name": "inventory-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^4.0.0",
-    "@trpc/client": "^9.25.3",
-    "@trpc/next": "^9.25.3",
-    "@trpc/react": "^9.25.3",
-    "@trpc/server": "^9.25.3",
-    "next": "12.2.0",
-    "next-auth": "^4.10.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "^3.39.1",
-    "superjson": "^1.9.1",
-    "zod": "^3.17.3"
-  },
-  "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.14",
-    "prisma": "^4.0.0",
-    "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
-  }
+	"name": "inventory-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"postinstall": "prisma generate",
+		"prepare": "husky install",
+		"format": "prettier -c .",
+		"format:fix": "prettier --write .",
+		"check-types": "tsc --project tsconfig.json --pretty --noEmit",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix .",
+		"lint-staged": "lint-staged",
+		"db:migrate": "prisma migrate dev",
+		"db:migrate:prod": "prisma migrate deploy",
+		"db:push": "prisma db push",
+		"db:seed": "prisma seed dev",
+		"db:studio": "prisma studio",
+		"test": "jest --passWithNoTests",
+		"test:watch": "jest --watch --passWithNoTests",
+		"test:ci": "jest --ci --passWithNoTests",
+		"test:staged": "jest --bail --findRelatedTests --passWithNoTests",
+		"updateSnapshots": "jest -u"
+	},
+	"dependencies": {
+		"@next-auth/prisma-adapter": "1.0.3",
+		"@prisma/client": "4.0.0",
+		"@trpc/client": "9.25.3",
+		"@trpc/next": "9.25.3",
+		"@trpc/react": "9.25.3",
+		"@trpc/server": "9.25.3",
+		"next": "12.2.2",
+		"next-auth": "4.9.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-query": "3.39.1",
+		"superjson": "1.9.1",
+		"zod": "3.17.3"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "17.0.3",
+		"@commitlint/config-conventional": "17.0.3",
+		"@testing-library/cypress": "8.0.3",
+		"@testing-library/jest-dom": "5.16.4",
+		"@testing-library/react": "13.3.0",
+		"@testing-library/user-event": "14.2.1",
+		"@types/node": "18.0.3",
+		"@types/react": "18.0.15",
+		"@types/react-dom": "18.0.6",
+		"autoprefixer": "10.4.7",
+		"eslint": "8.19.0",
+		"eslint-config-next": "12.2.2",
+		"eslint-config-prettier": "8.5.0",
+		"husky": "8.0.1",
+		"jest": "28.1.2",
+		"jest-environment-jsdom": "28.1.2",
+		"lint-staged": "13.0.3",
+		"postcss": "8.4.14",
+		"prettier": "2.7.1",
+		"prisma": "4.0.0",
+		"tailwindcss": "3.1.6",
+		"typescript": "4.7.4"
+	}
 }
