--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
 		"test:watch": "jest --watch --passWithNoTests",
 		"test:ci": "jest --ci --passWithNoTests",
 		"test:staged": "jest --bail --findRelatedTests --passWithNoTests",
-		"updateSnapshots": "jest -u"
+		"updateSnapshots": "jest -u",
+		"cypress": "cypress open",
+		"cypress:headless": "cypress run",
+		"e2e": "start-server-and-test start http://localhost:3000 cypress",
+		"e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless"
 	},
 	"dependencies": {
 		"@next-auth/prisma-adapter": "1.0.3",
@@ -62,6 +66,7 @@
 		"postcss": "8.4.14",
 		"prettier": "2.7.1",
 		"prisma": "4.0.0",
+		"start-server-and-test": "1.14.0",
 		"tailwindcss": "3.1.6",
 		"typescript": "4.7.4"
 	}
