build: docker & docker-compose files created

--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
 # Note that not all variables here might be in use for your selected configuration
 
 # Prisma
-DATABASE_URL=
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DOMAIN}:5432/${POSTGRES_DB}?schema=public"
+# DATABASE_URL="postgresql://akif:pw@localhost:5432/intentory_db?schema=public"
+
+POSTGRES_USER=akif
+POSTGRES_PASSWORD=pw
+POSTGRES_DB=intentory_db
+POSTGRES_DOMAIN=localhost
 
 # Next Auth
 NEXTAUTH_SECRET=
