--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@trpc/server": "9.25.3",
 		"next": "12.2.2",
 		"next-auth": "4.9.0",
+		"next-themes": "0.2.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-query": "3.39.1",
