build: env files updated

--- a/.env
+++ b/.env
@@ -1,18 +1,17 @@
-# Note that not all variables here might be in use for your selected configuration
+APP_PORT="3000"
 
 # Prisma
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DOMAIN}:5432/${POSTGRES_DB}?schema=public"
-# DATABASE_URL="postgresql://akif:pw@localhost:5432/intentory_db?schema=public"
+POSTGRES_USER="akif"
+POSTGRES_PASSWORD="pw"
+POSTGRES_DB="intentory_db"
+POSTGRES_PORT="5432"
 
-POSTGRES_USER=akif
-POSTGRES_PASSWORD=pw
-POSTGRES_DB=intentory_db
-POSTGRES_DOMAIN=localhost
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DOMAIN}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
 
 # Next Auth
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_SECRET="6cZdo9xgy9O7rGyMpKwvFx0hiVUBJHv2FrbaAHmOU+o="
+NEXTAUTH_URL="http://${NEXTAUTH_DOMAIN}:${APP_PORT}"
 
-# Next Auth Github Provider
-GITHUB_ID=
-GITHUB_SECRET=
+# Next Auth Github Provider - Inventory App Dev
+GITHUB_ID="39ee506c9f51aad1ffca"
+GITHUB_SECRET="58c4b85fbe2854584b8719bc9e8dff2e3cdfa2d0"
