--- a/.env.local
+++ b/.env.local
@@ -1,18 +1,3 @@
-# Note that not all variables here might be in use for your selected configuration
-
-# Prisma
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DOMAIN}:5432/${POSTGRES_DB}?schema=public"
-# DATABASE_URL="postgresql://akif:pw@localhost:5432/intentory_db?schema=public"
-
-POSTGRES_USER=akif
-POSTGRES_PASSWORD=pw
-POSTGRES_DB=intentory_db
-POSTGRES_DOMAIN=localhost
-
 # Next Auth
-NEXTAUTH_SECRET="6cZdo9xgy9O7rGyMpKwvFx0hiVUBJHv2FrbaAHmOU+o="
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET=
 
-# Next Auth Github Provider
-GITHUB_ID="d223ac22fb2f2a918c8d"
-GITHUB_SECRET="546993db7f8a8cbeec1ddb71bc5526d106ac5d22"
