--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,17 @@ version: '3'
 services:
     database:
         image: 'postgres:latest'
-        restart: always
-        env_file:
-            - .env
         ports:
-            - '5432:5432'
+            - '${POSTGRES_PORT}:${POSTGRES_PORT}'
+        restart: always
+        environment:
+            POSTGRES_USER: '${POSTGRES_USER}'
+            POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
+            POSTGRES_DB: '${POSTGRES_DB}'
 
     next:
         build: .
         ports:
-            - 3000:3000
-        environment:
-            DATABASE_URL: 'postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/${POSTGRES_DB}?schema=public'
-
-        env_file:
-            - .env
+            - '${APP_PORT}:${APP_PORT}'
         depends_on:
             - database
