--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"lint": "next lint",
 		"lint:fix": "next lint --fix .",
 		"lint-staged": "lint-staged",
-		"db:migrate": "prisma migrate dev",
+		"db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev --name postgres-init",
 		"db:migrate:prod": "prisma migrate deploy",
 		"db:push": "prisma db push",
 		"db:seed": "prisma seed dev",
@@ -57,6 +57,7 @@
 		"@types/react-dom": "18.0.6",
 		"autoprefixer": "10.4.7",
 		"cypress": "10.3.0",
+		"dotenv-cli": "6.0.0",
 		"eslint": "8.19.0",
 		"eslint-config-next": "12.2.2",
 		"eslint-config-prettier": "8.5.0",
