build: github oAuth configs added

--- a/.env
+++ b/.env
@@ -4,14 +4,14 @@ APP_PORT="3000"
 POSTGRES_USER="akif"
 POSTGRES_PASSWORD="pw"
 POSTGRES_DB="intentory_db"
+POSTGRES_DOMAIN="localhost"
 POSTGRES_PORT="5432"
-
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DOMAIN}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
 
 # Next Auth
 NEXTAUTH_SECRET="6cZdo9xgy9O7rGyMpKwvFx0hiVUBJHv2FrbaAHmOU+o="
-NEXTAUTH_URL="http://${NEXTAUTH_DOMAIN}:${APP_PORT}"
+NEXTAUTH_URL="http://localhost:${APP_PORT}"
 
-# Next Auth Github Provider - Inventory App Dev
+# Github Provider - Inventory App Dev
 GITHUB_ID="39ee506c9f51aad1ffca"
 GITHUB_SECRET="58c4b85fbe2854584b8719bc9e8dff2e3cdfa2d0"
