--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
-# Next Auth
-NEXTAUTH_DOMAIN="next"
-
 # Prisma
 POSTGRES_DOMAIN="database"
+
+# Github Provider - Inventory App Docker
+GITHUB_ID="bd44c3d825ebec8006c6"
+GITHUB_SECRET="62dcb93444368669d84cff2352f72d73e0a44035"
