chore: starting scripts dev,prod and prod-docker added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,5 @@ services:
             - '${APP_PORT}:${APP_PORT}'
         depends_on:
             - database
+        environment:
+            POSTGRES_DOMAIN: 'database'
