--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,9 +41,21 @@ jobs:
                   build: yarn build
                   start: yarn start
 
-    # TODO vercel deploy steps will be added
-    # vercel-deploy:
-    #     runs-on: ubuntu-latest
-    #     needs: [build]
-    #     steps:
-    #         - uses: actions/checkout@v2
+    deploy:
+        runs-on: ubuntu-latest
+        env:
+            VERCEL_TOKEN: 'UKjC9XeNBVFZYXPUfMaLYzmY'
+            VERCEL_ORG_ID: 'mEtXaNaX3NUKvp5zuScr7eKp'
+            VERCEL_PROJECT_ID: 'prj_oLfIavnJ6N9GCrNeuTm03g8tQ6By'
+        needs: [build]
+        steps:
+            - name: Checkout Code
+              uses: actions/checkout@v3
+
+            - name: Setup Node
+              uses: actions/setup-node@v3
+              with:
+                  node-version: '16.x'
+
+            - name: Deploy to Vercel
+              run: npx vercel --token ${VERCEL_TOKEN} --prod
