--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"lint-staged": "13.0.3",
 		"postcss": "8.4.14",
 		"prettier": "2.7.1",
+		"prettier-plugin-tailwindcss": "0.1.12",
 		"prisma": "4.0.0",
 		"start-server-and-test": "1.14.0",
 		"tailwindcss": "3.1.6",
