--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -12,6 +12,7 @@ on:
             - 'perf/**'
             - 'ci/**'
     pull_request:
+        types: [opened, reopened, synchronize]
         branches:
             - 'feat/**'
             - 'fix/**'
