--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,21 +26,31 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
+        env:
+            DATABASE_URL: postgresql://testuser:dbpass@postgres:5432/testdb?schema=public
+            NODE_ENV: test
+            NEXTAUTH_SECRET: supersecret
+        container:
+            image: cypress/browsers:node16.14.0-chrome99-ff97
+        services:
+            postgres:
+                image: postgres:latest
+                env:
+                    POSTGRES_USER: testuser
+                    POSTGRES_PASSWORD: dbpass
+                    POSTGRES_DB: testdb
+                ports:
+                    - 5432:5432
 
         steps:
             - name: Checkout Code
               uses: actions/checkout@v3
 
-            - name: Cache Dependencies
-              uses: c-hive/gha-yarn-cache@v2
-
-            - name: Setup Node
-              uses: actions/setup-node@v3
+            - name: Install dependencies & build
+              uses: cypress-io/github-action@v4
               with:
-                  node-version: '16.x'
-
-            - name: Install dependencies
-              run: yarn install --frozen-lockfile
+                  runTests: false
+                  build: yarn build
 
             - name: Format Check
               run: yarn format
@@ -51,14 +61,11 @@ jobs:
             - name: Type Check
               run: yarn check-types
 
-            - name: Build
-              run: yarn build
-
             - name: Run unit tests
               run: yarn test:ci
 
             - name: Run e2e tests
               uses: cypress-io/github-action@v4
               with:
-                  start: yarn start
-                  wait-on: 'http://localhost:3000'
+                  browser: chrome
+                  command: yarn e2e:ci
