--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "../tsconfig.json",
 	"compilerOptions": {
 		// "noEmit": true,
+		"isolatedModules": false,
 		"types": ["cypress", "@testing-library/cypress"]
 	},
 	"include": ["**/*.ts"],
