--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"build": "next build",
 		"start": "next start",
 		"wait:db": "wait-port localhost:5432",
-		"start:db": "docker compose up -d database",
-		"start:dev": "yarn start:db && yarn wait:db && yarn db:migrate:dev && yarn start",
-		"start:prod": "yarn start:db && yarn build && yarn wait:db && yarn db:migrate:dev && yarn start",
+		"start:db": "docker compose up -d database && yarn wait:db && yarn db:migrate:dev",
+		"start:dev": "yarn start:db && yarn dev",
+		"start:prod": "yarn build && yarn start:db && yarn start",
 		"start:prod:docker": "docker compose up -d && yarn wait:db && yarn db:migrate:dev",
 		"postinstall": "prisma generate",
 		"prepare": "husky install",
@@ -22,7 +22,8 @@
 		"db:migrate:dev": "prisma migrate dev --name postgres-init",
 		"db:migrate:prod": "prisma migrate deploy",
 		"db:push": "prisma db push",
-		"db:seed": "prisma seed dev",
+		"db:pull": "prisma db pull",
+		"db:seed": "prisma db seed",
 		"db:studio": "prisma studio",
 		"test": "jest --passWithNoTests",
 		"test:watch": "jest --watch --passWithNoTests",
@@ -31,8 +32,14 @@
 		"updateSnapshots": "jest -u",
 		"cypress": "cypress open",
 		"cypress:headless": "cypress run",
-		"e2e": "start-server-and-test start http://localhost:3000 cypress",
-		"e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless"
+		"e2e:dev": "start-server-and-test dev 3000 cypress",
+		"e2e:dev:headless": "start-server-and-test dev 3000 cypress:headless",
+		"e2e:prod": "yarn build && yarn wait:db && yarn db:migrate:dev && yarn start-server-and-test start 3000 cypress",
+		"e2e:prod:headless": "yarn build && yarn wait:db && yarn db:migrate:dev && yarn start-server-and-test start 3000 cypress:headless",
+		"e2e:ci": "yarn db:migrate:prod && yarn db:seed && yarn start-server-and-test start 3000 cypress:headless"
+	},
+	"prisma": {
+		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
 		"@next-auth/prisma-adapter": "1.0.3",
