Chore/trpc v10: updated to trpc v10 (#3)
* chore(trpc): trpc files upgraded to v10

* ci(cypress):  root user added

* test: user getall example added

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,6 +32,7 @@ jobs:
             NEXTAUTH_SECRET: supersecret
         container:
             image: cypress/browsers:node16.14.0-chrome99-ff97
+            options: --user 1001
         services:
             postgres:
                 image: postgres:latest
