--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
 	"dependencies": {
 		"@next-auth/prisma-adapter": "1.0.3",
 		"@prisma/client": "4.0.0",
-		"@trpc/client": "9.25.3",
-		"@trpc/next": "9.25.3",
-		"@trpc/react": "9.25.3",
-		"@trpc/server": "9.25.3",
+		"@trpc/client": "10.0.0-alpha.38",
+		"@trpc/next": "10.0.0-alpha.38",
+		"@trpc/react": "10.0.0-alpha.38",
+		"@trpc/server": "10.0.0-alpha.38",
 		"next": "12.2.2",
 		"next-auth": "4.9.0",
 		"next-themes": "0.2.0",
