--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"db:pull": "prisma db pull",
 		"db:seed": "prisma db seed",
 		"db:studio": "prisma studio",
+		"db:reset": "prisma migrate reset",
 		"test": "jest --passWithNoTests",
 		"test:watch": "jest --watch --passWithNoTests",
 		"test:ci": "jest --ci --passWithNoTests",
@@ -53,6 +54,7 @@
 		"next-themes": "0.2.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hot-toast": "2.3.0",
 		"react-query": "3.39.1",
 		"superjson": "1.9.1",
 		"zod": "3.17.3"
