--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
 			"@api/*": ["./src/pages/api/*"],
 			"@db/*": ["./src/server/db/*"],
 			"@router": ["./src/server/router"],
-			"@router/*": ["./src/server/router/*"]
+			"@router/*": ["./src/server/router/*"],
+			"@utils": ["./src/utils"],
+			"@utils/*": ["./src/utils/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
