feat(twitch-auth): twitch integration added for authentication (#5)

--- a/.env
+++ b/.env
@@ -15,3 +15,7 @@ NEXTAUTH_URL="http://localhost:${APP_PORT}"
 # Github Provider - Inventory App Dev
 GITHUB_ID="39ee506c9f51aad1ffca"
 GITHUB_SECRET="58c4b85fbe2854584b8719bc9e8dff2e3cdfa2d0"
+
+# Twitch Provider - Inventory App
+TWITCH_CLIENT_ID="4m4s8phgqzsl9cduo7jypeayvsjqae"
+TWITCH_CLIENT_SECRET="t8eayta5p5n4h3nuib7ndr10yhnqrh"
