test(integration): trpc route tests added for integration tests (#6)
* test(integration): trpc route tests added for integration tests

* ci: prepare db step before unit tests added

* test: getall tests updated for ci

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -62,6 +62,9 @@ jobs:
             - name: Type Check
               run: yarn check-types
 
+            - name: Prepare Database
+              run: yarn db:prepare
+
             - name: Run unit tests
               run: yarn test:ci
 
