--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,9 @@ jobs:
             - name: Type Check
               run: yarn check-types
 
+            - name: Prepare Database
+              run: yarn db:prepare
+
             - name: Run unit tests
               run: yarn test:ci
 
