--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	"dependencies": {
 		"@next-auth/prisma-adapter": "1.0.3",
 		"@prisma/client": "4.0.0",
+		"@tanstack/react-table": "8.2.6",
 		"@trpc/client": "10.0.0-alpha.38",
 		"@trpc/next": "10.0.0-alpha.38",
 		"@trpc/react": "10.0.0-alpha.38",
