--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev --turbo",
+		"dev-debug": "cross-env NODE_OPTIONS='--inspect' next dev",
 		"build": "next build",
 		"start": "next start",
 		"wait:db": "wait-port localhost:5432",
@@ -45,49 +46,60 @@
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
-		"@next-auth/prisma-adapter": "1.0.3",
-		"@prisma/client": "4.0.0",
-		"@tanstack/react-table": "8.2.6",
-		"@trpc/client": "10.0.0-alpha.38",
-		"@trpc/next": "10.0.0-alpha.38",
-		"@trpc/react": "10.0.0-alpha.38",
-		"@trpc/server": "10.0.0-alpha.38",
-		"next": "12.2.2",
-		"next-auth": "4.9.0",
-		"next-themes": "0.2.0",
+		"@next-auth/prisma-adapter": "1.0.5",
+		"@prisma/client": "4.11.0",
+		"@tanstack/react-query": "4.26.1",
+		"@tanstack/react-table": "8.7.9",
+		"@trpc/client": "10.15.0",
+		"@trpc/next": "10.15.0",
+		"@trpc/react-query": "10.15.0",
+		"@trpc/server": "10.15.0",
+		"next": "13.2.4",
+		"next-auth": "4.20.1",
+		"next-themes": "0.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-hot-toast": "2.3.0",
-		"react-query": "3.39.1",
-		"superjson": "1.9.1",
-		"zod": "3.17.3"
+		"react-hot-toast": "2.4.0",
+		"react-query": "3.39.3",
+		"superjson": "1.12.2",
+		"zod": "3.21.4"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "17.0.3",
-		"@commitlint/config-conventional": "17.0.3",
-		"@testing-library/cypress": "8.0.3",
-		"@testing-library/jest-dom": "5.16.4",
-		"@testing-library/react": "13.3.0",
-		"@testing-library/user-event": "14.2.1",
-		"@types/node": "18.0.3",
-		"@types/react": "18.0.15",
-		"@types/react-dom": "18.0.6",
-		"autoprefixer": "10.4.7",
-		"cypress": "10.3.0",
-		"eslint": "8.19.0",
-		"eslint-config-next": "12.2.2",
-		"eslint-config-prettier": "8.5.0",
-		"husky": "8.0.1",
-		"jest": "28.1.2",
-		"jest-environment-jsdom": "28.1.2",
-		"lint-staged": "13.0.3",
-		"postcss": "8.4.14",
-		"prettier": "2.7.1",
-		"prettier-plugin-tailwindcss": "0.1.12",
-		"prisma": "4.0.0",
-		"start-server-and-test": "1.14.0",
-		"tailwindcss": "3.1.6",
-		"typescript": "4.7.4",
-		"wait-port": "0.3.0"
+		"@commitlint/cli": "17.4.4",
+		"@commitlint/config-conventional": "17.4.4",
+		"@testing-library/cypress": "9.0.0",
+		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/react": "14.0.0",
+		"@testing-library/user-event": "14.4.3",
+		"@total-typescript/ts-reset": "0.4.2",
+		"@types/eslint": "8.21.1",
+		"@types/node": "18.15.0",
+		"@types/prettier": "2.7.2",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"@typescript-eslint/eslint-plugin": "5.54.1",
+		"@typescript-eslint/parser": "5.54.1",
+		"@vitejs/plugin-react": "3.1.0",
+		"autoprefixer": "10.4.14",
+		"cross-env": "7.0.3",
+		"cypress": "12.7.0",
+		"eslint": "8.36.0",
+		"eslint-config-next": "13.2.4",
+		"eslint-config-prettier": "8.7.0",
+		"eslint-plugin-tailwindcss": "3.10.1",
+		"husky": "8.0.3",
+		"jest": "29.5.0",
+		"jest-environment-jsdom": "29.5.0",
+		"jsdom": "21.1.0",
+		"lint-staged": "13.2.0",
+		"postcss": "8.4.21",
+		"prettier": "2.8.4",
+		"prettier-plugin-tailwindcss": "0.2.4",
+		"prisma": "4.11.0",
+		"start-server-and-test": "2.0.0",
+		"tailwindcss": "3.2.7",
+		"typescript": "4.9.5",
+		"vitest": "0.29.2",
+		"wait-port": "1.0.4"
 	}
 }
